styling changes made to index.js, index.html and styles.css

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,18 @@ button, input {
   font-family: Arial;
 }
 
+.butColorGreen{
+  background-color: greenyellow;
+}
+
+.butColorRed{
+  background-color: red;
+}
+
+.text-center{
+  text-align: center;
+}
+
 table {
   width: 100%;
 }
